// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadRow renders with uploaded file 1`] = `
<Fragment>
  <ConfirmDialogBox
    confirmDialogBoxId="dsi-dsid-delete"
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to remove this file from the uploaded queue?",
        "confirmationTitle": "Delete file",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <FileUploadRowDefaultView
    index={0}
    locale={
      Object {
        "embargoDateClosedAccess": "No date required",
      }
    }
    name="a.txt"
    onAccessConditionChange={[Function]}
    onDelete={[Function]}
    onEmbargoDateChange={[Function]}
    onFileDescriptionChange={[Function]}
    onOrderDownClick={[Function]}
    onOrderUpClick={[Function]}
    onSecurityPolicyChange={[Function]}
    requireOpenAccessStatus={true}
    size="100.0B"
  />
</Fragment>
`;

exports[`FileUploadRow should show confirmation and delete file 1`] = `
<Fragment>
  <ConfirmDialogBox
    confirmDialogBoxId="dsi-dsid-delete"
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to remove this file from the uploaded queue?",
        "confirmationTitle": "Delete file",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <FileUploadRowMobileView
    index={0}
    locale={
      Object {
        "embargoDateClosedAccess": "No date required",
        "embargoDateColumn": "Embargo date",
        "fileAccessColumn": "File access",
        "filenameColumn": "File name",
      }
    }
    name="a.txt"
    onAccessConditionChange={[Function]}
    onDelete={[Function]}
    onEmbargoDateChange={[Function]}
    onFileDescriptionChange={[Function]}
    onOrderDownClick={[Function]}
    onOrderUpClick={[Function]}
    onSecurityPolicyChange={[Function]}
    requireOpenAccessStatus={true}
    size="100.0B"
  />
</Fragment>
`;
